# shrinking

./: .gitignore  CHANGELOG.md  README.md  clean.sh  demo_shrinking.py  deploy.sh  license.txt  pyproject.toml  run_tests.sh  shrinking.py  test_shrink.py  try_me.sh
.github/workflows/: tests.yaml
src/shrinking/: __init__.py  backwards_compatibility.py  exceptions.py  problems.py  results.py  s.py  types.py  utils.py  version.py
src/shrinking/algorithms/: __init__.py  bisection.py  bisection_fb.py  gep.py  gep_fb.py  newton.py
tests/: __init__.py  test_api.py  utils.py
